--- a/day 4/index.html
+++ b/day 4/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <script src="./assets/js/recursion.js"></script>
+    <script src="./assets/js/task2.js"></script>
 </body>
 </html>
