--- a/day 5/index.html
+++ b/day 5/index.html
@@ -9,5 +9,6 @@
 <body>
     <script src="./assets/js/task1.js"></script>
     <script src="./assets/js/task2.js"></script>
+    <script src="./assets/js/task3.js"></script>
 </body>
 </html>
