--- a/day 7/index.html
+++ b/day 7/index.html
@@ -9,6 +9,6 @@
 <body>
     <script src="./assets/js/task1.js"></script>
     <script src="./assets/js/task2.js"></script>
-    <script src="./assets/js/copy.js"></script>
+    <script src="./assets/js/reduce.js"></script>
 </body>
 </html>
